--- a/deploy/www/samples/11/index.html
+++ b/deploy/www/samples/11/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>A3 - Sample 01</title>
+    <title>A3 - Sample 11</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" >
   </head>
   <body>
@@ -10,7 +10,7 @@
     <div id="wrapper">
       <div id="container"></div>
       <div id="footer">
-        <h1><span>11</span>Ortho-Cubist</h1>
+        <h1><span>11</span>Ortho-Monkey</h1>
         <p>Same as 01 really, but this time cracking out the
         Orthographic camera. Lovely.</p>
       </div>
