Fixed texture issue

--- a/deploy/www/samples/09/index.html
+++ b/deploy/www/samples/09/index.html
@@ -20,7 +20,7 @@
           <script src="../../library/dat.gui.js"></script>
           <script src="../../library/rAF.js"></script>
           <script src="../../library/modernizr.js"></script>
-          <script src="../../js/a3.min.js"></script>
+          <script src="../../js/a3.js"></script>
 
           <!-- Showtime! -->
           <script src="js/a3.sample.js"></script>
